--- a/package.json
+++ b/package.json
@@ -1,43 +1,36 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "name": "gatsby-starter-bootstrap-netlify",
+  "description": "Example Gatsby, Bootstrap, and Netlify CMS project",
+  "version": "1.0.0",
+  "author": "David Konsumer <konsumer@jetboystudio.com>",
   "dependencies": {
-    "bulma": "^0.6.0",
-    "gatsby": "^1.9.213",
-    "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify": "^1.0.19",
-    "gatsby-plugin-netlify-cms": "^1.0.9",
-    "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-sass": "^1.0.17",
-    "gatsby-plugin-sharp": "^1.6.34",
-    "gatsby-remark-images": "^1.5.50",
-    "gatsby-source-filesystem": "^1.5.23",
-    "gatsby-transformer-remark": "^1.7.33",
-    "gatsby-transformer-sharp": "^1.6.21",
-    "netlify-cms": "^1.7.0",
-    "lodash": "^4.17.5",
-    "lodash-webpack-plugin": "^0.11.4",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "bootstrap": "^4.1.0",
+    "bootswatch": "4.*",
+    "gatsby": "^1.9.253",
+    "gatsby-link": "^1.6.41",
+    "gatsby-plugin-netlify": "^1.0.7",
+    "gatsby-plugin-offline": "^1.0.10",
+    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-sass": "^1.0.26",
+    "gatsby-remark-copy-linked-files": "^1.5.32",
+    "gatsby-remark-prismjs": "^2.0.1",
+    "gatsby-source-filesystem": "^1.5.33",
+    "gatsby-transformer-remark": "^1.7.40",
+    "prismjs": "^1.14.0",
     "react-helmet": "^5.2.0",
-    "uuid": "^3.2.1"
+    "reactstrap": "^6.1.0"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "bootstrap",
+    "bootswatch",
+    "netlify"
   ],
   "license": "MIT",
-  "main": "n/a",
   "scripts": {
-    "start": "npm run develop",
     "build": "gatsby build",
-    "develop": "gatsby develop",
-    "serve": "gatsby serve",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gatsby develop",
+    "test": "gatsby build"
   },
-  "devDependencies": {
-    "prettier": "^1.7.4"
-  }
+  "devDependencies": {}
 }
